[workspace]
resolver = "3"
members = [
    "crates/cts-common",
    "crates/cts-gis",
    "crates/cts-log",
    "crates/cts-mbtiles",
    "crates/cts-middleware",
    "crates/cts-utils",
    "crates/cts-webui",
    "cts-upload-server", "cts-auth-server", "cts-feature-server", "cts-search-server",
]

[workspace.package]
authors = ["tanghy <tanghy@cloudthink.space>"]
homepage = "https://www.cloudthink.space"
publish = false
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maplibre/martin"
rust-version = "1.85.0"

[workspace.dependencies]
# 模块依赖
cts-common = { path = "crates/cts-common" }
cts-mbtiles = { path = "crates/cts-mbtiles" }
cts-utils = { path = "crates/cts-utils" }
cts-middleware = { path = "crates/cts-middleware" }
cts-log = { path = "crates/cts-log" }
response_utils = { git = "https://github.com/CloudThinkSpace/cts-base", package = "response_utils", version = "0.1.1" }
cts-pgrow = { git = "https://github.com/CloudThinkSpace/cts-base", package = "cts-pgrow", version = "0.1.1" }
cts-sql-expression = { git = "https://github.com/CloudThinkSpace/cts-base", package = "cts-sql-expression", version = "0.1.0" }
cts-upload = { git = "https://github.com/CloudThinkSpace/cts-base", package = "cts-upload", version = "0.1.0" }
cts-license = { git = "https://github.com/CloudThinkSpace/cts-base", package = "cts-license", version = "0.1.0" }

# 第三方库依赖
axum = "0.8.1"
tokio = "1.43.0"
tower = "0.5.2"
tower-http = "0.6.2"
serde = "1.0.218"
serde_json = "1.0.139"
serde_yaml = "0.9.33"
clap = "4.5.31"
postgres = "0.19.10"
mbtiles = "0.12.0"
log = "0.4.26"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
thiserror = "2.0.11"
time = "0.3.37"
sqlx = "0.8.3"
anyhow = "1.0.96"
jsonwebtoken = "9.3.1"
headers = "0.4.0"
chrono = "0.4.40"
