[package]
name = "cts-search-server"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tower.workspace = true
cts-log.workspace = true
cts-common.workspace = true
cts-middleware.workspace = true
tower-http = { workspace = true, features = ["cors", "fs"] }
response_utils.workspace = true
cts-sql-expression.workspace = true
