[package]
name = "cts-upload-server"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
cts-log.workspace = true
cts-common.workspace = true
cts-middleware.workspace = true
tower-http = { workspace = true, features = ["cors", "fs"] }
response_utils.workspace = true
cts-upload = {workspace = true, features = ["multipart","writer","reader"]}
tracing.workspace = true
cts-sql-expression.workspace = true
serde.workspace = true
serde_json.workspace = true
