[package]
name = "cts-common"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
sqlx = {workspace = true, features = ["postgres"]}
axum.workspace = true
cts-license.workspace = true
tokio = { workspace = true, features = ["full"] }
