[package]
name = "cts-log"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["time","local-time","env-filter"]}
tracing-appender.workspace = true
time = {workspace = true, features = ["formatting","parsing","macros","std", "local-offset"]}
log = "0.4.26"
